Correctly align timestamps
Fixes T88857

Bug: T88857

--- a/modules/styles/board/timestamps.less
+++ b/modules/styles/board/timestamps.less
@@ -3,19 +3,18 @@
 @import 'flow.helpers';
 
 .flow-timestamp {
-	display: inline-block;
 	text-align: left;
 
 	.flow-timestamp-user-formatted {
 		display: none;
 	}
 	.flow-timestamp-ago {
-		display: block;
+		display: inline;
 	}
 
 	&:hover {
 		.flow-timestamp-user-formatted {
-			display: block;
+			display: inline;
 		}
 		.flow-timestamp-ago {
 			display: none;
